--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "frontend",
+  "homepage": "http://Adarsh3thy.github.io/stkMktFrontEnd",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "antd": "^3.16.6",
     "axios": "^0.18.0",
+    "gh-pages": "^4.0.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
@@ -13,13 +15,16 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
     "recharts": "^1.5.0",
+    "save-dev": "^0.0.1-security",
     "sweetalert": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
