--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
