--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "homepage": "https://Adarsh3thy.github.io/stkMktFrontEnd",
+  "homepage": "https://adarsh3thy.github.io/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
