--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "frontend",
-  "homepage": "https://adarsh3thy.github.io/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -22,15 +21,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
-  },
-  "devDependencies": {
-    "gh-pages": "^4.0.0"
   },
   "browserslist": {
     "production": [
